# moss-agent

./: .gitignore  Cargo.toml  README.md  build-and-copy.bat  build-and-copy.ps1  build.rs  dxdiag_temp.txt
src/: main.rs  system_info.rs
